meme_analysis/.drake/_home_vdp5_data_gene_finder_ASM241v2_genes_exons_gfamily_exon2_orthofinder4,splitexon2fasta/stderr-2016-11-04_23.30.52_-0400
  File "/home/vdp5/scripts/general_purpose/splitfasta.py", line 28
    tmp = str(os.path.join('/' + outdir + '/' +  gene[1:][] + '.fasta'))
                                                          ^
SyntaxError: invalid syntax
